Fixes overflow of intro image and prevents it from covering header button

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,10 @@ footer {
     overflow: clip;
 }
 
+.intro__picture {
+    overflow-x: hidden;
+}
+
 .intro__img {
     max-width: 100vw;
     transform: scale(1.15);
@@ -221,6 +225,7 @@ footer {
 
     header {
         padding: 1.5rem 2.375rem 0 2.375rem;
+        z-index: 1; /* Prevents image from covering button in tablet and desktop mode */
     }
 
     footer {
@@ -229,6 +234,7 @@ footer {
 
     .intro {
         padding-left: 2.375rem;
+        padding-right: 0;
     }
 
     .intro__heading {
@@ -242,13 +248,15 @@ footer {
 
     .intro__img-container {
         flex: 45%;
+        position: relative;
+        overflow-y: visible
     }
 
     .intro__img {
         position: absolute;
-        top: -3rem;
-        right: -17rem;
-        max-width: 80vw;
+        top: -13rem;
+        right: -18.5rem;
+        transform: none;
     }
 
     .tiles-group {
